# polymarket

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
docs/: architecture.md
polyscanner/: __init__.py  auth.py  features.py  live.py  models.py  opportunities.py  orchestrator.py  paper_15m.py  parser.py  probability.py  providers.py  recorder.py  scanner.py  settlement.py  storage.py  validation.py
polyscanner/agents/: __init__.py  core.py
tests/: test_auth.py  test_features.py  test_live.py  test_microstructure_agent.py  test_opportunities.py  test_orchestrator.py  test_paper_15m.py  test_parser.py  test_probability.py  test_providers.py  test_recorder.py  test_settlement.py  test_storage.py  test_validation.py
