[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-probability-scanner"
version = "0.1.0"
description = "Read-only Kalshi BTC probability scanner."
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "requests>=2.32",
  "streamlit>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["polyscanner*"]
